fixup! dark mode: dim images

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -24,7 +24,7 @@
         $main-bg:                 #444444;
 
         body#{$class}::before {
-            background-image: url("/images/bg/body.jpg");
+            background-image: url($baseurl + "images/bg/body.jpg");
             position: absolute;
             content: "";
             width: 100%;
@@ -41,10 +41,9 @@
                 content: "";
                 width: 100%;
                 height: 295px;
-                background: url("/images/bg/isometric-grid.png") top right repeat;
+                @include background-image-2x($baseurl + "images/bg/isometric-grid", 35px, 21px, top right, repeat);
                 position: absolute;
                 filter: brightness(.4) contrast(1.6);
-                background-size: 35px 21px;
                 z-index: -1;
             }
             div.monitor {
